--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start2": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "start":"nodemon index.js"
+    "start": "nodemon index.js"
   },
   "engines": {
     "node": "8"
@@ -15,7 +15,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.3.0",
+    "mqtt": "^3.0.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6",
