--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
+    "mongoose": "^5.8.9",
     "mqtt": "^3.0.0"
   },
   "devDependencies": {
