--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "node": "8"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
     "mongoose": "^5.8.9",
-    "mqtt": "^3.0.0"
+    "mqtt": "^3.0.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6",
